--- a/arabic/arabic.html
+++ b/arabic/arabic.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2023-09-23 Sat 19:46 -->
+<!-- 2023-09-23 Sat 20:40 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title><span class='hebrew'>לימוד ערבית</span></title>
@@ -241,20 +241,20 @@ for the JavaScript code in this tag.
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#orgc62715d">1. משאבים</a></li>
-<li><a href="#orgbd06f34">2. ערבית מדוברת בניב של המזרח־הקרוב (ניב שָׁאמִי), <span class='ruqaa'>عامية شامية</span></a></li>
-<li><a href="#orgb96866b">3. <span class='hebrew'>ערבית ספרותית</span>, <span class='latin'>MSA</span>, <span class='ruqaa'>فصحة</span></a></li>
+<li><a href="#orgbc15f8c">1. משאבים</a></li>
+<li><a href="#org7667be1">2. ערבית מדוברת בניב של המזרח־הקרוב (ניב שָׁאמִי), <span class='ruqaa'>عامية شامية</span></a></li>
+<li><a href="#orgb9c25af">3. <span class='hebrew'>ערבית ספרותית</span>, <span class='latin'>MSA</span>, <span class='ruqaa'>فصحة</span></a></li>
 </ul>
 </div>
 </div>
 <script src="https://mayer-goldberg.github.io/website/hebrew-support/gmayer-org-mode-web.js"></script>
 
-<div id="outline-container-orgc62715d" class="outline-2">
-<h2 id="orgc62715d"><span class="section-number-2">1</span> משאבים</h2>
+<div id="outline-container-orgbc15f8c" class="outline-2">
+<h2 id="orgbc15f8c"><span class="section-number-2">1</span> משאבים</h2>
 <div class="outline-text-2" id="text-1">
 </div>
-<div id="outline-container-orgc85785b" class="outline-3">
-<h3 id="orgc85785b"><span class="section-number-3">1.1</span> ספרים</h3>
+<div id="outline-container-orgc605927" class="outline-3">
+<h3 id="orgc605927"><span class="section-number-3">1.1</span> ספרים</h3>
 <div class="outline-text-3" id="text-1-1">
 <ul class="org-ul">
 <li>הספרים של יוחנן אליחי
@@ -262,7 +262,7 @@ for the JavaScript code in this tag.
 <li>מה אני פחות אוהב בספרים של אליחי
 <ul class="org-ul">
 <li>אני פחות מתחבר לתעתיק שם, בעיקר משום שהוא מתעקש לבטא בתעתיק את השינויים הפונטיים שקורים בין מלים (כמו מושג הסנדהי, בסנסקריט), וזהיש כבר נקודה שממנה קשה לזהות מה המלים, וזה מאד מאט את הקריאה</li>
-<li>התעתיק הספציפי שאליחי משתמש בו כולל דברים שלא קיימים לא במקלדת ולא בפונטים רגילים. למשל הוא ישים את השד<span style='font-family: Amiri; font-size: 20px; '>&#xfe7c;</span>ה מעל לאותיות, ישים את הנקודותים של התא־מרבוטה<span style='font-family: Amiri; font-size: 20px; '>&#x0308;</span> גם מעל האות <b>ה</b> וגם מעל לאות <b>ת</b> — שזה נוח בכתב, אבל סיוט בדפוס! ויש לו עוד כל מיני תוספות שאי אפשר לתמוך בהם מבלי להתאים פונט מיוחד ולתכנת תמיכה במקלדת…</li>
+<li>התעתיק הספציפי שאליחי משתמש בו כולל דברים שלא קיימים לא במקלדת ולא בפונטים רגילים. למשל הוא ישים את הש<span class='shaddeh'>ד</span>ה מעל לאותיות, ישים את הנקודותים של התא־מרבוט<span class='ta-marbouta'>ה</span> גם מעל האות <b>ה</b> וגם מעל לאות <b>ת</b> — שזה נוח בכתב, אבל סיוט בדפוס! ויש לו עוד כל מיני תוספות שאי אפשר לתמוך בהם מבלי להתאים פונט מיוחד ולתכנת תמיכה במקלדת…</li>
 <li>מלכתחילה מאד התלהבתי מהטיעונים של אליחי בעד התעתיק שלו ונגד השימוש באותיות ערביות לרישום ערבית מדוברת. כיום אני מתרשם מהם הרבה פחות. החברים הערבים שלי לא מתקשים להשתמש באותיות הערביות ובתנועות הסטנדרטיות על מנת לכתוב בערבית מדוברת. ההתעסקות באלף־בית הערבי מועיל, ומאפשר לי לבנות כתב יד, להתרגל לקריאה ולכתיבה מהירים, להתרגל להקלדה, ויוצרים בסיס טוב ללימוד ערבית ספרותית בהמשך. אני בהחלט מעדיף כיום את השימוש באותיות ערביות עם ההרחבות הידועות הלקוחות מפרסית, על מנת לתמוך במלים מלועזית, בלהג העיראקי, וכו'.</li>
 </ul></li>
 <li>מה אני אוהב בספרים של אליחי
@@ -281,8 +281,8 @@ for the JavaScript code in this tag.
 </div>
 </div>
 
-<div id="outline-container-org6980a22" class="outline-3">
-<h3 id="org6980a22"><span class="section-number-3">1.2</span> מלונים מקוונים</h3>
+<div id="outline-container-org242f688" class="outline-3">
+<h3 id="org242f688"><span class="section-number-3">1.2</span> מלונים מקוונים</h3>
 <div class="outline-text-3" id="text-1-2">
 <ul class="org-ul">
 <li><a href="https://milon.madrasafree.com/">המלון המקוון של <b>מדרסה</b> לערבית מדוברת</a>. המלון פותח, מומש, ותוחזק על ידי <a href="https://rothfarb.info/"><b>רונן רוטפרב</b></a>. לאחר שנים שבהן ניהל את הפרוייקט לבדו, רונן העביר את הפרוייקט <a href="https://madrasafree.com/">לבית הספר <b>מדרסה</b> לערבית</a>, ואלו מתחזקים אותו כעת.</li>
@@ -291,24 +291,24 @@ for the JavaScript code in this tag.
 </div>
 </div>
 
-<div id="outline-container-orgcc765b8" class="outline-3">
-<h3 id="orgcc765b8"><span class="section-number-3">1.3</span> תרגומים אינטרלינאריים</h3>
+<div id="outline-container-orgef0c098" class="outline-3">
+<h3 id="orgef0c098"><span class="section-number-3">1.3</span> תרגומים אינטרלינאריים</h3>
 </div>
 </div>
-<div id="outline-container-orgbd06f34" class="outline-2">
-<h2 id="orgbd06f34"><span class="section-number-2">2</span> ערבית מדוברת בניב של המזרח־הקרוב (ניב שָׁאמִי), <span class='ruqaa'>عامية شامية</span></h2>
+<div id="outline-container-org7667be1" class="outline-2">
+<h2 id="org7667be1"><span class="section-number-2">2</span> ערבית מדוברת בניב של המזרח־הקרוב (ניב שָׁאמִי), <span class='ruqaa'>عامية شامية</span></h2>
 <div class="outline-text-2" id="text-2">
 <p>
 ערבית מדוברת של המזרח הקרוב היא אוסף של להגים המדוברים באיזור שהיסטורית נקרא בשם <b>סוריה הגדולה</b>, או שָׁאם (<span class='naskh'>شام</span>). האיזור כולל את לבנון, סוריה, ירדן, ישראל, הגדה המערבית, ורצועת עזה. מבחינה היסטורית, <b>סוריה הגדולה</b> כוללת גם את עיראק, אבל ערבית מדוברת עיראקית שונה מאד משאר הלהגים של <b>סוריה הגדולה</b>, וכולל השפעות רבות מפרסית ותורכית, ולכן מקובל שלא לכלול אותו בלהגים של <b>סוריה הגדולה</b>, אלא להתייחס אליו כלהג נפרד.
 </p>
 </div>
 
-<div id="outline-container-org9a65fed" class="outline-3">
-<h3 id="org9a65fed"><span class="section-number-3">2.1</span> Timeline</h3>
+<div id="outline-container-org117c691" class="outline-3">
+<h3 id="org117c691"><span class="section-number-3">2.1</span> Timeline</h3>
 <div class="outline-text-3" id="text-2-1">
 </div>
 <ol class="org-ol">
-<li><a id="orgd6f8a23"></a><span class="timestamp-wrapper"><span class="timestamp">&lt;2023-09-21 Thu&gt;</span></span><br />
+<li><a id="org277158b"></a><span class="timestamp-wrapper"><span class="timestamp">&lt;2023-09-21 Thu&gt;</span></span><br />
 <div class="outline-text-4" id="text-2-1-1">
 <p>
 הכרטסת שלי כוללת 4261 כרטיסים. הוספתי 230+ כרטיסים מאז תחילת החודש. זה קצת מאכזב. קיוויתי שאוכל להוסיף מעל לאלף כרטיסים חדשים, ולא קרה. אני צריך להגביר את הקצב לפני תחילת הסמסטר.
@@ -327,13 +327,13 @@ for the JavaScript code in this tag.
 </div>
 </div>
 
-<div id="outline-container-orgb96866b" class="outline-2">
-<h2 id="orgb96866b"><span class="section-number-2">3</span> <span class='hebrew'>ערבית ספרותית</span>, <span class='latin'>MSA</span>, <span class='ruqaa'>فصحة</span></h2>
+<div id="outline-container-orgb9c25af" class="outline-2">
+<h2 id="orgb9c25af"><span class="section-number-2">3</span> <span class='hebrew'>ערבית ספרותית</span>, <span class='latin'>MSA</span>, <span class='ruqaa'>فصحة</span></h2>
 </div>
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: Mayer Goldberg (<span class='hebrew'>מֵאִיר גּוֹלְדְּבֵּרְג</span>)</p>
-<p class="date">Created: 2023-09-23 Sat 19:46</p>
+<p class="date">Created: 2023-09-23 Sat 20:40</p>
 <p class="validation"><a href="http://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
