--- a/arabic/arabic.html
+++ b/arabic/arabic.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2023-09-23 Sat 22:04 -->
+<!-- 2023-09-23 Sat 23:12 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title><span class='hebrew'>לימוד ערבית</span></title>
@@ -241,20 +241,21 @@ for the JavaScript code in this tag.
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#org7484c06">1. משאבים</a></li>
-<li><a href="#orga2073fb">2. ערבית מדוברת בניב של המזרח־הקרוב (ניב שָׁאמִי), <span class='ruqaa'>عامية شامية</span></a></li>
-<li><a href="#org8e1ac26">3. <span class='hebrew'>ערבית ספרותית</span>, <span class='latin'>MSA</span>, <span class='ruqaa'>فصحة</span></a></li>
+<li><a href="#org9dd2231">1. משאבים</a></li>
+<li><a href="#orgbc9ffe5">2. הכתב הערבי</a></li>
+<li><a href="#org4173300">3. ערבית מדוברת בניב של המזרח־הקרוב (ניב שָׁאמִי), <span class='ruqaa'>عامية شامية</span></a></li>
+<li><a href="#org3fc1b96">4. <span class='hebrew'>ערבית ספרותית</span>, <span class='latin'>MSA</span>, <span class='ruqaa'>فصحة</span></a></li>
 </ul>
 </div>
 </div>
 <script src="https://mayer-goldberg.github.io/website/hebrew-support/gmayer-org-mode-web.js"></script>
 
-<div id="outline-container-org7484c06" class="outline-2">
-<h2 id="org7484c06"><span class="section-number-2">1</span> משאבים</h2>
+<div id="outline-container-org9dd2231" class="outline-2">
+<h2 id="org9dd2231"><span class="section-number-2">1</span> משאבים</h2>
 <div class="outline-text-2" id="text-1">
 </div>
-<div id="outline-container-orga7ffabc" class="outline-3">
-<h3 id="orga7ffabc"><span class="section-number-3">1.1</span> ספרים</h3>
+<div id="outline-container-orgd93d04e" class="outline-3">
+<h3 id="orgd93d04e"><span class="section-number-3">1.1</span> ספרים</h3>
 <div class="outline-text-3" id="text-1-1">
 <ul class="org-ul">
 <li>הספרים של יוחנן אליחי
@@ -281,8 +282,8 @@ for the JavaScript code in this tag.
 </div>
 </div>
 
-<div id="outline-container-org5b29d7e" class="outline-3">
-<h3 id="org5b29d7e"><span class="section-number-3">1.2</span> מלונים מקוונים</h3>
+<div id="outline-container-org96d465d" class="outline-3">
+<h3 id="org96d465d"><span class="section-number-3">1.2</span> מלונים מקוונים</h3>
 <div class="outline-text-3" id="text-1-2">
 <ul class="org-ul">
 <li><a href="https://milon.madrasafree.com/">המלון המקוון של <b>מדרסה</b> לערבית מדוברת</a>. המלון פותח, מומש, ותוחזק על ידי <a href="https://rothfarb.info/"><b>רונן רוטפרב</b></a>. לאחר שנים שבהן ניהל את הפרוייקט לבדו, רונן העביר את הפרוייקט <a href="https://madrasafree.com/">לבית הספר <b>מדרסה</b> לערבית</a>, ואלו מתחזקים אותו כעת.</li>
@@ -291,31 +292,45 @@ for the JavaScript code in this tag.
 </div>
 </div>
 
-<div id="outline-container-org12da35d" class="outline-3">
-<h3 id="org12da35d"><span class="section-number-3">1.3</span> תרגומים אינטרלינאריים</h3>
+<div id="outline-container-org0fe0588" class="outline-3">
+<h3 id="org0fe0588"><span class="section-number-3">1.3</span> תרגומים אינטרלינאריים</h3>
 </div>
 </div>
-<div id="outline-container-orga2073fb" class="outline-2">
-<h2 id="orga2073fb"><span class="section-number-2">2</span> ערבית מדוברת בניב של המזרח־הקרוב (ניב שָׁאמִי), <span class='ruqaa'>عامية شامية</span></h2>
+<div id="outline-container-orgbc9ffe5" class="outline-2">
+<h2 id="orgbc9ffe5"><span class="section-number-2">2</span> הכתב הערבי</h2>
 <div class="outline-text-2" id="text-2">
+</div>
+<div id="outline-container-org73e872d" class="outline-3">
+<h3 id="org73e872d"><span class="section-number-3">2.1</span> הסדר המלוני</h3>
+</div>
+<div id="outline-container-org3584be8" class="outline-3">
+<h3 id="org3584be8"><span class="section-number-3">2.2</span> הקלדה עיוורת</h3>
+</div>
+<div id="outline-container-orgb8106c3" class="outline-3">
+<h3 id="orgb8106c3"><span class="section-number-3">2.3</span> כתיבה תמה</h3>
+</div>
+</div>
+<div id="outline-container-org4173300" class="outline-2">
+<h2 id="org4173300"><span class="section-number-2">3</span> ערבית מדוברת בניב של המזרח־הקרוב (ניב שָׁאמִי), <span class='ruqaa'>عامية شامية</span></h2>
+<div class="outline-text-2" id="text-3">
 <p>
 ערבית מדוברת של המזרח הקרוב היא אוסף של להגים המדוברים באיזור שהיסטורית נקרא בשם <b>סוריה הגדולה</b>, או שָׁאם (<span class='naskh'>شام</span>). האיזור כולל את לבנון, סוריה, ירדן, ישראל, הגדה המערבית, ורצועת עזה. מבחינה היסטורית, <b>סוריה הגדולה</b> כוללת גם את עיראק, אבל ערבית מדוברת עיראקית שונה מאד משאר הלהגים של <b>סוריה הגדולה</b>, וכולל השפעות רבות מפרסית ותורכית, ולכן מקובל שלא לכלול אותו בלהגים של <b>סוריה הגדולה</b>, אלא להתייחס אליו כלהג נפרד.
 </p>
 </div>
 
-<div id="outline-container-org152b25b" class="outline-3">
-<h3 id="org152b25b"><span class="section-number-3">2.1</span> Timeline</h3>
-<div class="outline-text-3" id="text-2-1">
+<div id="outline-container-org7807f22" class="outline-3">
+<h3 id="org7807f22"><span class="section-number-3">3.1</span> Timeline</h3>
+<div class="outline-text-3" id="text-3-1">
 </div>
 <ol class="org-ol">
-<li><a id="orgdbc2eed"></a><span class="timestamp-wrapper"><span class="timestamp">&lt;2023-09-21 Thu&gt;</span></span><br />
-<div class="outline-text-4" id="text-2-1-1">
+<li><a id="orgf5da94a"></a><span class="timestamp-wrapper"><span class="timestamp">&lt;2023-09-21 Thu&gt;</span></span><br />
+<div class="outline-text-4" id="text-3-1-1">
 <p>
 הכרטסת שלי כוללת 4261 כרטיסים. הוספתי 230+ כרטיסים מאז תחילת החודש. זה קצת מאכזב. קיוויתי שאוכל להוסיף מעל לאלף כרטיסים חדשים, ולא קרה. אני צריך להגביר את הקצב לפני תחילת הסמסטר.
 </p>
 
 <p>
-יצרתי מקלדת וירטואלית לערבית עבור העורך שלי, אימקס. אני מאד אוהב את המקלדת הזאת משום שהיא מבוססת על מקלדת ה־<span class='latin'>Sholes, QWERTY</span> הסטנדרטית לאנגלית, שאני כבר מכיר היטב. היא תומכת היטב בניקוד, כולל בדברים "אקזוטיים" יותר כמו סימני ההפסקות בקריאה בקוראן, הארכת אותיות תוך שימוש ב־<span class='naskh'>تَطْويـــــــل</span>, וכו', והרחבות של האלף־בית הערבי (<span class='naskh'>پ، ڤ، گ</span>), ומנגישה סימנים מיוניקוד ערבי שבדרך כלל אינם נתמכים על ידי המקלדת הסטנדרטית, ולמרות כל זה, קל לכתוב בה מהר ומדוייק. הבעיה היא שהמקלדת הזאת לא נתמכת לא על ידי הטלפון שלי ולא על ידי הלפטופ עצמו, אלא קיימת אך ורק מתוך אימקס, כך שכשאני עובד על הלפטופ, התרגלתי לעשות <i><span class='latin'>copy-and-paste</span></i> לוואצאפ או לאתרים שונים או ב־<span class='latin'>shell</span>. אז כעת אני מקליד בשתי מקלדות ערביות שונות: הסטנדרטית [יחסית] שקיימת בלינוקס ובאנדרואיד, וזו שאני פיתחתי, שהיא נוחה מאד, שיש לה עקומת־למידה קטנה מאד ושקל להקליד בה מהר, אבל שזמינה רק באימקס… ובגלל שאני מקליד בשתי מקלדות, קשה לי לפתח מהירות ולצמצם טעויות… ולכן בצער רב אני מתחיל לרדת מהמקלדת המדהימה שפיתחתי, ומאמץ [בקור?] את המקלדת הסטנדרטית בערבית.
+יצרתי מקלדת וירטואלית לערבית עבור העורך שלי, אימקס. אני מאד אוהב את המקלדת הזאת משום שהיא מבוססת על מקלדת ה־<span class='latin'>Sholes, QWERTY</span> הסטנדרטית לאנגלית, שאני כבר מכיר היטב. היא תומכת היטב בניקוד, כולל בדברים "אקזוטיים" יותר כמו סימני ההפסקות בקריאה בקוראן, הארכת אותיות תוך שימוש ב־<span class='naskh'>تَطْويـــــــل</span>, וכו', והרחבות של האלף־בית הערבי (<span class='naskh'>پ، ڤ، گ</span>), ומנגישה סימנים מיוניקוד ערבי שבדרך כלל אינם נתמכים על ידי המקלדת הסטנדרטית, ולמרות כל זה, קל לכתוב בה מהר ומדוייק. הבעיה היא שהמקלדת הזאת לא נתמכת לא על ידי הטלפון שלי ולא על ידי הלפטופ עצמו, אלא קיימת אך ורק מתוך אימקס, כך שכשאני עובד על הלפטופ, התרגלתי לעשות <b>העתק־הדבק</b> לוואצאפ או לאתרים שונים או ב־<span class='latin'>shell</span>. אז כעת אני מקליד בשתי מקלדות ערביות שונות: הסטנדרטית [יחסית] שקיימת בלינוקס ובאנדרואיד, וזו שאני פיתחתי, שהיא נוחה מאד, שיש לה עקומת־למידה קטנה מאד ושקל להקליד בה מהר, אבל שזמינה רק באימקס… ובגלל שאני מקליד בשתי מקלדות, קשה לי לפתח מהירות ולצמצם טעויות… ולכן בצער רב אני מתחיל לרדת מהמקלדת המדהימה שפיתחתי, ומאמץ [בקור?] את המקלדת הסטנדרטית בערבית.
 </p>
 
 <p>
@@ -327,13 +342,13 @@ for the JavaScript code in this tag.
 </div>
 </div>
 
-<div id="outline-container-org8e1ac26" class="outline-2">
-<h2 id="org8e1ac26"><span class="section-number-2">3</span> <span class='hebrew'>ערבית ספרותית</span>, <span class='latin'>MSA</span>, <span class='ruqaa'>فصحة</span></h2>
+<div id="outline-container-org3fc1b96" class="outline-2">
+<h2 id="org3fc1b96"><span class="section-number-2">4</span> <span class='hebrew'>ערבית ספרותית</span>, <span class='latin'>MSA</span>, <span class='ruqaa'>فصحة</span></h2>
 </div>
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: Mayer Goldberg (<span class='hebrew'>מֵאִיר גּוֹלְדְּבֵּרְג</span>)</p>
-<p class="date">Created: 2023-09-23 Sat 22:04</p>
+<p class="date">Created: 2023-09-23 Sat 23:12</p>
 <p class="validation"><a href="http://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
