--- a/arabic/arabic.html
+++ b/arabic/arabic.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2023-09-23 Sat 23:16 -->
+<!-- 2023-09-24 Sun 17:50 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title><span class='hebrew'>לימוד ערבית</span></title>
@@ -241,28 +241,28 @@ for the JavaScript code in this tag.
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents">
 <ul>
-<li><a href="#orgbfa7dae">1. משאבים</a></li>
-<li><a href="#orgf1cd8b1">2. הכתב הערבי</a></li>
-<li><a href="#org9c49b60">3. ערבית מדוברת בניב של המזרח־הקרוב (ניב שָׁאמִי), <span class='ruqaa'>عامية شامية</span></a></li>
-<li><a href="#org54298b4">4. <span class='hebrew'>ערבית ספרותית</span>, <span class='latin'>MSA</span>, <span class='ruqaa'>فصحة</span></a></li>
+<li><a href="#org1b92485">1. משאבים</a></li>
+<li><a href="#orgb7ffab5">2. הכתב הערבי</a></li>
+<li><a href="#orge81e308">3. ערבית מדוברת בניב של המזרח־הקרוב (ניב שָׁאמִי), <span class='ruqaa'>عامية شامية</span></a></li>
+<li><a href="#org7f1e004">4. <span class='hebrew'>ערבית ספרותית</span>, <span class='latin'>MSA</span>, <span class='ruqaa'>فصحة</span></a></li>
 </ul>
 </div>
 </div>
 <script src="https://mayer-goldberg.github.io/website/hebrew-support/gmayer-org-mode-web.js"></script>
 
-<div id="outline-container-orgbfa7dae" class="outline-2">
-<h2 id="orgbfa7dae"><span class="section-number-2">1</span> משאבים</h2>
+<div id="outline-container-org1b92485" class="outline-2">
+<h2 id="org1b92485"><span class="section-number-2">1</span> משאבים</h2>
 <div class="outline-text-2" id="text-1">
 </div>
-<div id="outline-container-org4f0b15e" class="outline-3">
-<h3 id="org4f0b15e"><span class="section-number-3">1.1</span> ספרים</h3>
+<div id="outline-container-orge923574" class="outline-3">
+<h3 id="orge923574"><span class="section-number-3">1.1</span> ספרים</h3>
 <div class="outline-text-3" id="text-1-1">
 <ul class="org-ul">
 <li>הספרים של יוחנן אליחי
 <ul class="org-ul">
 <li>מה אני פחות אוהב בספרים של אליחי
 <ul class="org-ul">
-<li>אני פחות מתחבר לתעתיק שם, בעיקר משום שהוא מתעקש לבטא בתעתיק את השינויים הפונטיים שקורים בין מלים (כמו מושג הסנדהי, בסנסקריט), וזהיש כבר נקודה שממנה קשה לזהות מה המלים, וזה מאד מאט את הקריאה</li>
+<li>אני פחות מתחבר לתעתיק שם, בעיקר משום שהוא מתעקש לבטא בתעתיק את השינויים הפונטיים שקורים בין מלים (כמו מושג <a href="https://en.wikipedia.org/wiki/Sandhi">הסנדהי</a>, בסנסקריט), וזוהי כבר נקודה שממנה קשה לזהות מה המלים, וזה מאד מאט את הקריאה</li>
 <li>התעתיק הספציפי שאליחי משתמש בו כולל דברים שלא קיימים לא במקלדת ולא בפונטים רגילים. למשל הוא ישים את הש<span class='shaddeh'>ד</span>ה מעל לאותיות, ישים את הנקודותים של התא־מרבוט<span class='marboutah'>ה</span> גם מעל האות <b>ה</b> וגם מעל לאות <b>ת</b> — שזה נוח בכתב, אבל סיוט בדפוס! ויש לו עוד כל מיני תוספות שאי אפשר לתמוך בהם מבלי להתאים פונט מיוחד ולתכנת תמיכה במקלדת…</li>
 <li>מלכתחילה מאד התלהבתי מהטיעונים של אליחי בעד התעתיק שלו ונגד השימוש באותיות ערביות לרישום ערבית מדוברת. כיום אני מתרשם מהם הרבה פחות. החברים הערבים שלי לא מתקשים להשתמש באותיות הערביות ובתנועות הסטנדרטיות על מנת לכתוב בערבית מדוברת. ההתעסקות באלף־בית הערבי מועיל, ומאפשר לי לבנות כתב יד, להתרגל לקריאה ולכתיבה מהירים, להתרגל להקלדה, ויוצרים בסיס טוב ללימוד ערבית ספרותית בהמשך. אני בהחלט מעדיף כיום את השימוש באותיות ערביות עם ההרחבות הידועות הלקוחות מפרסית, על מנת לתמוך במלים מלועזית, בלהג העיראקי, וכו'.</li>
 </ul></li>
@@ -282,8 +282,8 @@ for the JavaScript code in this tag.
 </div>
 </div>
 
-<div id="outline-container-org2a9e408" class="outline-3">
-<h3 id="org2a9e408"><span class="section-number-3">1.2</span> מלונים מקוונים</h3>
+<div id="outline-container-org1cf652c" class="outline-3">
+<h3 id="org1cf652c"><span class="section-number-3">1.2</span> מלונים מקוונים</h3>
 <div class="outline-text-3" id="text-1-2">
 <ul class="org-ul">
 <li><a href="https://milon.madrasafree.com/">המלון המקוון של <b>מדרסה</b> לערבית מדוברת</a>. המלון פותח, מומש, ותוחזק על ידי <a href="https://rothfarb.info/"><b>רונן רוטפרב</b></a>. לאחר שנים שבהן ניהל את הפרוייקט לבדו, רונן העביר את הפרוייקט <a href="https://madrasafree.com/">לבית הספר <b>מדרסה</b> לערבית</a>, ואלו מתחזקים אותו כעת.</li>
@@ -292,39 +292,61 @@ for the JavaScript code in this tag.
 </div>
 </div>
 
-<div id="outline-container-org94d1b36" class="outline-3">
-<h3 id="org94d1b36"><span class="section-number-3">1.3</span> תרגומים אינטרלינאריים</h3>
+<div id="outline-container-org975d47e" class="outline-3">
+<h3 id="org975d47e"><span class="section-number-3">1.3</span> תרגומים אינטרלינאריים</h3>
 </div>
 </div>
-<div id="outline-container-orgf1cd8b1" class="outline-2">
-<h2 id="orgf1cd8b1"><span class="section-number-2">2</span> הכתב הערבי</h2>
+<div id="outline-container-orgb7ffab5" class="outline-2">
+<h2 id="orgb7ffab5"><span class="section-number-2">2</span> הכתב הערבי</h2>
 <div class="outline-text-2" id="text-2">
 </div>
-<div id="outline-container-org1fb939b" class="outline-3">
-<h3 id="org1fb939b"><span class="section-number-3">2.1</span> הסדר המלוני</h3>
+<div id="outline-container-orgf6bc4bf" class="outline-3">
+<h3 id="orgf6bc4bf"><span class="section-number-3">2.1</span> הסדר המלוני</h3>
 </div>
-<div id="outline-container-org9a0b5e5" class="outline-3">
-<h3 id="org9a0b5e5"><span class="section-number-3">2.2</span> הקלדה עיוורת</h3>
+<div id="outline-container-org3ae4b23" class="outline-3">
+<h3 id="org3ae4b23"><span class="section-number-3">2.2</span> הקלדה עיוורת</h3>
 </div>
-<div id="outline-container-orgd323b66" class="outline-3">
-<h3 id="orgd323b66"><span class="section-number-3">2.3</span> כתיבה תמה</h3>
+<div id="outline-container-org0e85d6a" class="outline-3">
+<h3 id="org0e85d6a"><span class="section-number-3">2.3</span> כתיבה תמה</h3>
 </div>
 </div>
-<div id="outline-container-org9c49b60" class="outline-2">
-<h2 id="org9c49b60"><span class="section-number-2">3</span> ערבית מדוברת בניב של המזרח־הקרוב (ניב שָׁאמִי), <span class='ruqaa'>عامية شامية</span></h2>
+<div id="outline-container-orge81e308" class="outline-2">
+<h2 id="orge81e308"><span class="section-number-2">3</span> ערבית מדוברת בניב של המזרח־הקרוב (ניב שָׁאמִי), <span class='ruqaa'>عامية شامية</span></h2>
 <div class="outline-text-2" id="text-3">
 <p>
 ערבית מדוברת של המזרח הקרוב היא אוסף של להגים המדוברים באיזור שהיסטורית נקרא בשם <b>סוריה הגדולה</b>, או שָׁאם (<span class='naskh'>شام</span>). האיזור כולל את לבנון, סוריה, ירדן, ישראל, הגדה המערבית, ורצועת עזה. מבחינה היסטורית, <b>סוריה הגדולה</b> כוללת גם את עיראק, אבל ערבית מדוברת עיראקית שונה מאד משאר הלהגים של <b>סוריה הגדולה</b>, וכולל השפעות רבות מפרסית ותורכית, ולכן מקובל שלא לכלול אותו בלהגים של <b>סוריה הגדולה</b>, אלא להתייחס אליו כלהג נפרד.
 </p>
 </div>
 
-<div id="outline-container-orgb476031" class="outline-3">
-<h3 id="orgb476031"><span class="section-number-3">3.1</span> Timeline</h3>
+<div id="outline-container-org4764708" class="outline-3">
+<h3 id="org4764708"><span class="section-number-3">3.1</span> Timeline</h3>
 <div class="outline-text-3" id="text-3-1">
 </div>
 <ol class="org-ol">
-<li><a id="org1581420"></a><span class="timestamp-wrapper"><span class="timestamp">&lt;2023-09-21 Thu&gt;</span></span><br />
+<li><a id="org86c2f2c"></a><span class="timestamp-wrapper"><span class="timestamp">&lt;2023-09-23 Sat&gt;</span></span><br />
 <div class="outline-text-4" id="text-3-1-1">
+<p>
+ממשיך ללמוד כרטיסים. לא הוספתי חדשים, אבל שיניתי את אופן הלימוד שלי: כעת כל פעם ש־"הצד השני" של הכרטיס הוא בערבית, אני רושם את המלה באותיות ערביות ומשווה. זו עבודה רבה יותר אבל יש לה יתרונות חשובים:
+</p>
+<ul class="org-ul">
+<li>דוברי עברית למדו באופן מכוון שלא להבחין בהבדלים בין ט ל־ת, בין א ל־ע, בין כּ ל־ק, וכו'. בערבית, ההבדלים האלה אינם הבדלים של מוצא (כמו אשכנזים לעומת מזרחים) או הבדלים של סגנון או הגייה, אלא ההבדלים האלו מבחינים בין מלים שונות לחלוטין. <span class='naskh'>حارة</span> (שכונה) אינה <span class='naskh'>حارّة</span> (חריפה) או <span class='naskh'>خرا</span> (חרא). דובר ילידי של עברית <b>חייב</b> ללמד את אוזנו ולשונו להבחין בין הצלילים השונים ולהפיק את הצלילים הנכונים ביחס למה שהוא רוצה לומר.</li>
+<li>אני מתאמן הרבה יותר בכתיבה בערבית:
+<ul class="org-ul">
+<li>זה עוזר לי להשתלם בכתיבה תמה ולשפר את כתב היד שלי</li>
+<li>זה עוזר לי לשפר את מהירות הכתיבה</li>
+<li>זה נותן לי בסיס טוב יותר לקריאה ולכתיבה של ערבית ספרותית בעתיד</li>
+</ul></li>
+<li>במקביל אני הוגה את המלה/ביטוי/משפט בקול רם. זה עוזר לי לזכור את הכתיב הנכון, להבדיל בין אותיות שהגייתן דומה, לא להוסיף ולא לגרוע תנועות ארוכות, לזכור את הש<span class='shaddeh'>ד</span>ה בכתיבה ובהגייה, לזכור מתי נון־סופית היא תַּנְוִין (<span class='naskh'>تَنوِين</span>), וכו'</li>
+</ul>
+
+<p>
+סיימתי לכתוב את התמיכה במקלדת ערבית סטנדרטית+ באימקס. המשמעות של סטנדרטית+ היא שהאותיות תואמות למקומן במקלדת הערבית הסטנדרטית, אבל התַּשְׁכִּיל (<span class='naskh'>تَشْكِيل</span>) ממשיך לפי השיטה שפיתחתי עבור ניקוד בעברית ובערבית. ככה אני אקליד מהר יותר במקלדת ערבית מקובלת (בטלפון ובמחשבים שונים), אבל הניקוד, שממילא כמעט שלא נזקקים לו, יהיה במקומות הגיוניים יותר. היתרון הוא שהמקלדת שלי יכולה לטפל בכל היוניקוד הערבי, כולל בתווים המיוחדים הנדרשים להקלדה של הקוראן, ושאינם מצויים במקלדת הערבית הסטנדרטית.
+</p>
+</div>
+</li>
+
+<li><a id="org12e447b"></a><span class="timestamp-wrapper"><span class="timestamp">&lt;2023-09-21 Thu&gt;</span></span><br />
+<div class="outline-text-4" id="text-3-1-2">
 <p>
 הכרטסת שלי כוללת 4261 כרטיסים. הוספתי 230+ כרטיסים מאז תחילת החודש. זה קצת מאכזב. קיוויתי שאוכל להוסיף מעל לאלף כרטיסים חדשים, ולא קרה. אני צריך להגביר את הקצב לפני תחילת הסמסטר.
 </p>
@@ -342,13 +364,13 @@ for the JavaScript code in this tag.
 </div>
 </div>
 
-<div id="outline-container-org54298b4" class="outline-2">
-<h2 id="org54298b4"><span class="section-number-2">4</span> <span class='hebrew'>ערבית ספרותית</span>, <span class='latin'>MSA</span>, <span class='ruqaa'>فصحة</span></h2>
+<div id="outline-container-org7f1e004" class="outline-2">
+<h2 id="org7f1e004"><span class="section-number-2">4</span> <span class='hebrew'>ערבית ספרותית</span>, <span class='latin'>MSA</span>, <span class='ruqaa'>فصحة</span></h2>
 </div>
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: Mayer Goldberg (<span class='hebrew'>מֵאִיר גּוֹלְדְּבֵּרְג</span>)</p>
-<p class="date">Created: 2023-09-23 Sat 23:16</p>
+<p class="date">Created: 2023-09-24 Sun 17:50</p>
 <p class="validation"><a href="http://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
